--- a/index.html
+++ b/index.html
@@ -6,8 +6,54 @@
     <link rel="stylesheet" href="content/css/main.css">
 </head>
 <body>
-<div class="qzy-wrapper">
-    <a href="admin/index.html">管理后台页面</a> | <a href="view.html">期刊页面</a>
+<div class="qzy-index-wrap">
+    <header class="qzy-header">
+        <div class="qzy-center cf">
+            <div class="top-logo">
+                <img src="content/images/top-logo.png">
+            </div>
+            <nav class="top-nav">
+                <a href="#">首页</a>
+                <a href="#">寻宇纪</a>
+                <a href="#">资源站</a>
+                <a href="#">关于我们</a>
+            </nav>
+        </div>
+    </header>
+    <section class="qzy-top-banner">
+        <div class="qzy-top-slide">
+            <img src="content/images/slide-holder.jpg">
+        </div>
+    </section>
+    <section class="qzy-index-main">
+        <div class="qzy-center">
+            <div class="main-divide">
+                <div>追寻乔振宇的脚步　　记录属于乔家人和政委之间的点点滴滴</div>
+            </div>
+            <div class="main-row">
+                <div>
+                    <nav>
+                        <a href="#">●欧阳少恭角色期刊《千载弦歌》</a>
+                    </nav>
+                </div>
+                <div>
+                    <img src="content/images/id-01.png">
+                </div>
+            </div>
+            <div class="main-row">
+                <div>
+                    <img src="content/images/id-02.png">
+                </div>
+                <div>
+                    <nav>
+                        <a href="#">●乔振宇影视资源集合</a>
+                        <a href="#">●乔振宇相关访谈集合</a>
+                        <a href="#">●乔振宇相关角色优秀MV集合</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 </body>
 </html>
